<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kenstevens.stratinit</groupId>
    <artifactId>stratinit-master</artifactId>
    <version>1.2.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Strategic Initiative Master</name>

    <developers>
        <developer>
            <id>khstevens</id>
            <name>Ken Stevens</name>
            <email>ken.stevens@sympatico.ca</email>
            <url>www.strategicinitiative.org</url>
            <organization>Toccata Games</organization>
            <organizationUrl>www.strategicinitiative.org</organizationUrl>
            <timezone>EST</timezone>
        </developer>
    </developers>

    <organization>
        <name>Ken Stevens</name>
        <url>http://www.strategicinitiative.org/</url>
    </organization>

    <modules>
        <module>stratinit-graph</module>
        <module>stratinit-core</module>
        <module>stratinit-dao</module>
        <module>stratinit-test</module>
        <module>stratinit-server</module>
        <module>stratinit-rest</module>
        <module>stratinit-ui</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring.boot.version>3.5.11</spring.boot.version>
        <querydsl.version>5.1.0</querydsl.version>
        <jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
        <liquibase.version>4.29.2</liquibase.version>
        <postgresql.version>42.7.7</postgresql.version>
        <jjwt.version>0.12.6</jjwt.version>
        <guava.version>33.4.0-jre</guava.version>
        <commons-lang3.version>3.18.0</commons-lang3.version>
        <commons-validator.version>1.9.0</commons-validator.version>
        <springdoc.version>2.8.5</springdoc.version>
        <swagger.version>2.2.28</swagger.version>
        <jakarta.mail.version>2.1.3</jakarta.mail.version>
        <angus-mail.version>2.0.3</angus-mail.version>
        <git-commit-id-plugin.version>9.0.1</git-commit-id-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Project modules -->
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-graph</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-test</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-ui</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Liquibase -->
            <dependency>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-core</artifactId>
                <version>${liquibase.version}</version>
            </dependency>

            <!-- Database -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <!-- QueryDSL -->
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-core</artifactId>
                <version>${querydsl.version}</version>
            </dependency>
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-jpa</artifactId>
                <version>${querydsl.version}</version>
                <classifier>jakarta</classifier>
            </dependency>
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-apt</artifactId>
                <version>${querydsl.version}</version>
                <classifier>jakarta</classifier>
                <scope>provided</scope>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>

            <!-- Mail -->
            <dependency>
                <groupId>jakarta.mail</groupId>
                <artifactId>jakarta.mail-api</artifactId>
                <version>${jakarta.mail.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.angus</groupId>
                <artifactId>angus-mail</artifactId>
                <version>${angus-mail.version}</version>
            </dependency>

            <!-- Third-party -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>${commons-validator.version}</version>
            </dependency>

            <!-- API Documentation -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.12.1</version>
                    <configuration>
                        <release>21</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>-Xmx2048m --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>-Xmx2048m --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.16.2</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
